# p2prc-home-server

./: README.md  README.org  p2prc-home-server.tex
docs/: P2PRC-Tracking-home-server.drawio  README.md  p2prc-home-server.org  p2prc-home-server.tex
python/: .gitignore  library.py  requirements.txt  test.py
python/SamplePythonTestServer/: killserver.sh
python/p2prc-homeserver/: pyproject.toml
python/p2prc-homeserver/SamplePythonTestServer/: server.sh
python/p2prc-homeserver/p2prc_homeserver/: __init__.py
python/p2prc-homeserver/tests/: test.py
