[project]
name = "p2prc-homeserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Akilan",email = "me@akilan.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"dacite",
"schedule",
"requests"
]

include = [
    {path = "lib/*.so", format = "wheel"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[pytest]  
pythonpath = "./p2prc_homeserver"

